<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TableRow android:padding="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/programinfo_name"
                    android:textColor="@color/colorBlack6" />

                <TextView
                    android:id="@+id/intro_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:textColor="@color/colorBlack7" />
            </TableRow>

            <TableRow android:padding="2dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/programinfo_time"
                    android:textColor="@color/colorBlack6" />

                <TextView
                    android:id="@+id/intro_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="left|center"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack7" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/programinfo_rating"
                    android:textColor="@color/colorBlack6" />

                <TextView
                    android:id="@+id/intro_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:textColor="@color/colorRed" />
            </TableRow>

            <TableRow android:padding="2dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/programinfo_category"
                    android:textColor="@color/colorBlack6" />

                <TextView
                    android:id="@+id/intro_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="left|center"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack7" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/programinfo_area"
                    android:textColor="@color/colorBlack6" />

                <TextView
                    android:id="@+id/intro_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack7" />
            </TableRow>


            <TableRow android:padding="2dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/programinfo_director"
                    android:textColor="@color/colorBlack6" />

                <TextView
                    android:id="@+id/intro_director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:gravity="left|center"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack7" />
            </TableRow>

            <TableRow android:padding="2dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/programinfo_actor"
                    android:textColor="@color/colorBlack6" />

                <TextView
                    android:id="@+id/intro_actor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:gravity="left|center"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack7" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorBlackE" />

        <TextView
            android:id="@+id/intro_intro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lineSpacingMultiplier="1.3"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:textColor="@color/colorBlack7" />
    </LinearLayout>
</ScrollView>
